--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 #VSCode
-.vscode/
-!.vscode/settings.json
-!.vscode/launch.json
+# .vscode/
 
 # dependencies
 /node_modules
