jsonファイルに対して末尾コンマつけてた

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,11 +5,11 @@
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
   "forwardPorts": [7071, 10000, 10001, 10002],
   "otherPortsAttributes": {
-    "onAutoForward": "ignore",
+    "onAutoForward": "ignore"
   },
   "features": {
     "ghcr.io/devcontainers/features/azure-cli:1": {},
-    "ghcr.io/jlaundry/devcontainer-features/azure-functions-core-tools:1": {},
+    "ghcr.io/jlaundry/devcontainer-features/azure-functions-core-tools:1": {}
   },
   "customizations": {
     "vscode": {
@@ -23,8 +23,8 @@
         "oderwat.indent-rainbow",
         "VisualStudioExptTeam.vscodeintellicode",
         "VisualStudioExptTeam.intellicode-api-usage-examples",
-        "shardulm94.trailing-spaces",
-      ],
-    },
-  },
+        "shardulm94.trailing-spaces"
+      ]
+    }
+  }
 }
