--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,17 @@
 {
   "tabWidth": 2,
   "printWidth": 100,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "overrides": [
+    {
+      "files": [
+        "./**/*.json"
+      ],
+      "options": {
+        "trailingComma": "none"
+      }
+    }
+  ]
 }
