--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}' && next lint --fix"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.6",
-    "@mui/x-data-grid": "^6.19.2",
-    "axios": "^1.6.7",
-    "next": "14.1.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.0",
+    "@mui/material": "^6.3.0",
+    "@mui/x-data-grid": "^7.23.5",
+    "axios": "^1.7.9",
+    "next": "14.2.22",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.0",
-    "swr": "^2.2.4"
+    "react-hook-form": "^7.54.2",
+    "swr": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.2.22",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.4",
+    "prettier": "^3.4.2",
     "typescript": "^5"
   }
 }
